yaml_parser/tests/fail/invalid-mapping-after-sequence.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 3, column 1
  |
3 | invalid: x
  | ^
expected `...`
